Fix issues, refactoring, add column/row gap to themecustomizer

--- a/trunk/public/css/post-gallery-public.css
+++ b/trunk/public/css/post-gallery-public.css
@@ -186,6 +186,13 @@ body.liteboxgallery-open {
 
 .postgallery-wrapper .gallery-item {
   position: relative;
+  display: inline-block;
+  text-align: center;
+  vertical-align: top;
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .with-animation .gallery-item {
@@ -206,7 +213,7 @@ body.liteboxgallery-open {
 }
 
 .elementor-editor-active .gallery-item a {
-  pointer-events: none;
+  pointer-events: none !important;
 }
 
 .postgallery-wrapper .pg-theme-thumbs {
@@ -219,8 +226,57 @@ body.liteboxgallery-open {
   width: auto;
 }
 
+.postgallery-wrapper .gallery-columns-2 .gallery-item {
+  max-width: 50%;
+}
+
+.postgallery-wrapper .gallery-columns-3 .gallery-item {
+  max-width: calc(100% / 3);
+}
+
+.postgallery-wrapper .gallery-columns-4 .gallery-item {
+  max-width: 25%;
+}
+
+.postgallery-wrapper .gallery-columns-5 .gallery-item {
+  max-width: 20%;
+}
+
+.postgallery-wrapper .gallery-columns-6 .gallery-item {
+  max-width: calc(100% / 6);
+}
+
+.postgallery-wrapper .gallery-columns-7 .gallery-item {
+  max-width: calc(100% / 7);
+}
+
+.postgallery-wrapper .gallery-columns-8 .gallery-item {
+  max-width: calc(100% / 8);
+}
+
+.postgallery-wrapper .gallery-columns-9 .gallery-item {
+  max-width: calc(100% / 9);
+}
+
+.postgallery-wrapper .gallery-columns-10 .gallery-item {
+  max-width: 10%;
+}
+
+.postgallery-wrapper .gallery-columns-11 .gallery-item {
+  max-width: calc(100% / 11);
+}
+
+.postgallery-wrapper .gallery-columns-12 .gallery-item {
+  max-width: calc(100% / 12);
+}
+
 .postgallery-wrapper .gallery-item .bg-image {
   display: none;
+}
+
+.postgallery-wrapper.items-equal .gallery-item a {
+  all: initial;
+  cursor: pointer;
 }
 
 .postgallery-wrapper.items-equal .gallery-item .bg-image {
